--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -1,3 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- light mode styles -->
-</resources>
+
+    <style name="Theme.AndroidCleanArchitectureMVVMHiltRXmaster"
+        parent="android:Theme.Material.Light.NoActionBar" /></resources>
